fix: make sure the list lines are aligned

--- a/inst/module-navigation/module-navigation.css
+++ b/inst/module-navigation/module-navigation.css
@@ -60,53 +60,69 @@
   padding: 10px;
 }
 
+.teal-modules-tree,
 .teal-modules-tree ul {
-  margin-left: 1.25rem;
+  list-style: none;
+  margin: 0;
+  padding-left: 1.25em;
+  position: relative;
+}
+
+.teal-modules-tree > li {
   padding-left: 0;
 }
 
 .teal-modules-tree li {
-  list-style: none;
-  margin: 0.5rem 0;
   position: relative;
+  margin: 0;
+  padding: 0;
 }
 
 .teal-modules-tree li::before {
   content: "";
   position: absolute;
-  top: -1rem;
-  left: -1.25rem;
-  border-left: 1px solid var(--bs-border-color);
-  border-bottom: 1px solid var(--bs-border-color);
-  width: 1.25rem;
-  height: 2rem;
-}
-
-.teal-modules-tree li::after {
-  content: "";
-  position: absolute;
-  top: 0.6875rem;
-  left: -1.25rem;
-  border-left: 1px solid var(--bs-border-color);
-  width: 1px;
+  top: -1em;
+  left: -1.25em;
+  width: 1.5em;
   height: 100%;
+  border-left: 1px solid var(--bs-border-color, #bbb);
+  border-bottom: 1px solid var(--bs-border-color, #bbb);
+  pointer-events: none;
 }
 
-.teal-modules-tree li:last-child::after {
+.teal-modules-tree ul > li:last-child::before {
+  border-left: 1px solid transparent;
+}
+
+ul.teal-modules-tree > li > ul > li:last-child:before {
+  border-left: 1px solid var(--bs-border-color, #bbb);
+}
+
+.teal-modules-tree > li::before {
   display: none;
 }
 
-.teal-modules-tree li:hover::before,
-.teal-modules-tree li:hover::after {
-  border-color: var(--bs-primary);
+.teal-modules-tree li > a,
+.teal-modules-tree li > span,
+.teal-modules-tree li > ul {
+  display: block;
+  padding-left: 1.25em;
 }
 
 .teal-modules-tree .module-group-label {
   margin-left: 0 !important;
   font-weight: bold;
-  color: var(--bs-secondary);
+  color: var(--bs-secondary, #6c757d);
   border: 1px solid #dee2e6;
   border-radius: 12px;
-  padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
+  padding: var(--bs-nav-link-padding-y, 0.375rem)
+    var(--bs-nav-link-padding-x, 0.75rem);
   display: inline-block;
+  background: #fff;
+  position: relative;
+  z-index: 1;
+}
+
+.teal-modules-tree li:hover::before {
+  border-color: var(--bs-primary, #0d6efd);
 }
